# flakes

./: .gitignore  Justfile  README.md  flake.nix
templates/cargo-workspace/: Cargo.toml  flake.nix
templates/cpp/: .gitignore  CMakeLists.txt  Doxyfile  README.md  flake.nix
templates/devshell-base/: flake.nix
templates/haskell/: flake.nix
templates/nuxt-starter/: .env.example  README.md  drizzle.config.ts  flake.nix  nuxt.config.ts  package.json
templates/nuxt-starter/app/: app.config.ts  app.vue
templates/nuxt-starter/app/components/: auth-form.vue
templates/nuxt-starter/app/components/auth/: login.vue  register.vue  user-menu.vue
templates/nuxt-starter/app/composables/: useAuth.ts
templates/nuxt-starter/app/layouts/: default.vue
templates/nuxt-starter/app/lib/: auth-client.ts
templates/nuxt-starter/app/middleware/: auth.ts  guest.ts
templates/nuxt-starter/app/pages/: dashboard.vue  index.vue  login.vue
templates/nuxt-starter/server/: auth.ts
templates/nuxt-starter/server/api/auth/: [...all].ts
templates/nuxt-starter/server/db/: drizzle.ts  schema.ts
templates/nuxt-starter/server/db/migrations/meta/: 0000_snapshot.json  _journal.json
templates/nuxt-starter/server/middleware/: auth.ts
templates/nuxt-starter/server/utils/: withAuth.ts
templates/php/: flake.nix
templates/rust/: Justfile  flake.nix
templates/standardml/: CMakeLists.txt  flake.nix
templates/zensical/: Justfile  flake.nix  pyproject.toml  zensical.toml
templates/zensical/docs/: index.md
